--- a/src/main/java/com/mycompany/prototipo/g_proveedores.form
+++ b/src/main/java/com/mycompany/prototipo/g_proveedores.form
@@ -54,7 +54,7 @@
     <Container class="javax.swing.JPanel" name="jPanel3">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="cc" green="0" red="cc" type="rgb"/>
+          <Color blue="99" green="ff" red="99" type="rgb"/>
         </Property>
       </Properties>
       <Constraints>
@@ -124,7 +124,7 @@
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="99" green="33" red="ff" type="rgb"/>
+          <Color blue="33" green="ff" red="cc" type="rgb"/>
         </Property>
       </Properties>
       <Constraints>
