--- a/src/main/java/com/mycompany/prototipo/escritorio.form
+++ b/src/main/java/com/mycompany/prototipo/escritorio.form
@@ -28,7 +28,7 @@
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="1e" red="1d" type="rgb"/>
+          <Color blue="99" green="ff" red="99" type="rgb"/>
         </Property>
       </Properties>
       <Constraints>
