--- a/src/main/java/com/mycompany/prototipo/clientes.form
+++ b/src/main/java/com/mycompany/prototipo/clientes.form
@@ -541,7 +541,7 @@
     <Container class="javax.swing.JPanel" name="jPanel5">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="66" green="0" red="ff" type="rgb"/>
+          <Color blue="33" green="0" red="0" type="rgb"/>
         </Property>
       </Properties>
 
