--- a/src/main/java/vista/clientes.form
+++ b/src/main/java/vista/clientes.form
@@ -72,7 +72,7 @@
                   <Component id="jButton5" pref="30" max="32767" attributes="0"/>
                   <Component id="jButton12" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="617" max="32767" attributes="0"/>
+              <EmptySpace pref="627" max="32767" attributes="0"/>
           </Group>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
@@ -353,7 +353,7 @@
                   <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jLabel6" min="-2" pref="37" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                   <Component id="jButton3" min="-2" pref="38" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jButton2" min="-2" pref="38" max="-2" attributes="0"/>
@@ -541,7 +541,7 @@
     <Container class="javax.swing.JPanel" name="jPanel5">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="66" green="0" red="ff" type="rgb"/>
+          <Color blue="33" green="1e" red="1d" type="rgb"/>
         </Property>
       </Properties>
 
